@@ -2,6 +2,7 @@ Revision history for Socialtext-Utils
 
 0.13 - not yet released
   - Socialtext::Resting::Getopt doesn't set pass_through globally
+  - Socialtext::EditPage names the tempfiles more meaningfully
 
 0.12 - Wed Mar 21 21:40:29 PDT 2007
   - Refactor Socialtext::Resting::Mock's tag and page handling
